cabal-version:      2.4
name:               rhyolite-account-frontend
version:            0.1.0.0
synopsis:           Functions for creating and authenticating accounts
homepage:           https://github.com/obsidiansystems/rhyolite
bug-reports:        https://github.com/obsidiansystems/rhyolite/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          Obsidian Systems LLC
category:           Web

library
  exposed-modules:
    Rhyolite.Frontend.Account
    --TODO: Rename Template to View
    Rhyolite.Frontend.Account.Template
  build-depends:
      base
    , containers
    , data-default
    , lens
    , mtl
    , obelisk-route
    , reflex-dom-core
    , rhyolite-account-types
    , signed-data
    , text
    , validation
  hs-source-dirs:   src
  default-language: Haskell2010
