cabal-version:      2.4
name:               rhyolite-account-types
version:            0.1.0.0
synopsis:           Account types for rhyolite apps
homepage:           https://github.com/obsidiansystems/rhyolite
bug-reports:        https://github.com/obsidiansystems/rhyolite/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright: Obsidian Systems LLC
category:           Web

library
    exposed-modules:  Rhyolite.Account
    build-depends:    base
                    , aeson
                    , aeson-gadt-th
                    , beam-core
                    , bytestring
                    , constraints-extras
                    , dependent-sum-template
                    , iv-common
                    , lens
                    , mtl
                    , obelisk-route
                    , signed-data
                    , text
                    , time
                    , uuid
    hs-source-dirs:   src
    default-language: Haskell2010
