cabal-version:      2.4
name:               rhyolite-beam-db
version:            0.1.0.0
synopsis:           Beam database functions.
homepage:           https://github.com/obsidiansystems/rhyolite
bug-reports:        https://github.com/obsidiansystems/rhyolite/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          2021 Obsidian Systems LLC
category:           Web
extra-source-files: README.md

library
  exposed-modules:
    Rhyolite.DB.Beam

  build-depends:
      base
    , beam-core
    , beam-postgres
    , postgresql-simple

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
