cabal-version:      2.4
name:               rhyolite-beam-db
version:            0.1.0.0
synopsis:           Beam database functions.
homepage:           https://github.com/obsidiansystems/rhyolite
bug-reports:        https://github.com/obsidiansystems/rhyolite/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          2021 Obsidian Systems LLC
category:           Web

library
  exposed-modules:
    Rhyolite.DB.Beam
    Rhyolite.DB.Beam.Types
    Rhyolite.DB.Beam.Deriving

  build-depends:
      base
    , beam-automigrate
    , beam-core
    , beam-postgres
    , lens
    , postgresql-simple
    , rhyolite-beam-orphans
    , text
    , time
    , uuid

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
