cabal-version:      2.4
name:               rhyolite-beam-orphans
version:            0.1.0.0
synopsis:           Missing instances that have not yet been upstreamed to beam
homepage:           https://github.com/obsidiansystems/rhyolite
bug-reports:        https://github.com/obsidiansystems/rhyolite/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          2021 Obsidian Systems LLC
category:           Web

library
  exposed-modules:
    Rhyolite.DB.Beam.Orphans

  build-depends:
      base
    , beam-core

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
