cabal-version:      2.4
name:               mime-mail-orphans
version:            0.1.0.0
synopsis:           Orphan instances for mime-mail
homepage:           https://github.com/obsidiansystems/rhyolite
bug-reports:        https://github.com/obsidiansystems/rhyolite/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          2021 Obsidian Systems LLC
category:           Web

library
  exposed-modules:
    Network.Mail.Mime.Orphans
  build-depends:
      base
    , aeson
    , bytestring-aeson-orphans
    , mime-mail

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
