cabal-version:      2.4
name:               rhyolite-groundhog-legacy-types
version:            0.1.0.0
synopsis:
homepage:           https://github.com/obsidiansystems/rhyolite
bug-reports:           https://github.com/obsidiansystems/rhyolite/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright: 2021 Obsidian Systems LLC
category:           Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Rhyolite.Account
    build-depends:    base
                  , lens
                  , aeson
                  , bytestring
                  , text
                  , time
                  , database-id-class
                  , rhyolite-common
                  , obelisk-route
                  , signed-data
    hs-source-dirs:   src
    default-language: Haskell2010
