cabal-version:      2.4
name:               rhyolite-groundhog-legacy
version:            0.1.0.0
synopsis:           Legacy adapter for groundhog-based rhyolite projects
homepage:           https://github.com/obsidiansystems/rhyolite
bug-reports:        https://github.com/obsidiansystems/rhyolite/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          2021 Obsidian Systems LLC
category:           Web
extra-source-files: README.md

library
  exposed-modules:
    Rhyolite.Account.Groundhog
    Rhyolite.DB.Groundhog
    Rhyolite.DB.Groundhog.Email
    Rhyolite.DB.Groundhog.EmailWorker
    Rhyolite.DB.Groundhog.Orphans
    Rhyolite.DB.Groundhog.Schema
    Rhyolite.DB.Groundhog.Schema.Class
    Rhyolite.DB.Groundhog.Serializable
    Rhyolite.DB.Groundhog.TH
    Rhyolite.DB.NotifyListen.Groundhog
    Rhyolite.Network.PushNotification.Worker
    Rhyolite.Task.Groundhog
    Rhyolite.Task.Groundhog.Worker

  build-depends:
    , aeson
    , async
    , base
    , blaze-html
    , bytestring
    , bytestring-aeson-orphans
    , constraints
    , constraints-extras
    , containers
    , data-default
    , database-id-class
    , database-id-groundhog
    , exceptions
    , groundhog
    , groundhog-postgresql
    , groundhog-th
    , HaskellNet
    , http-conduit
    , io-streams
    , lens
    , lifted-base
    , mime-mail
    , monad-control
    , monad-logger
    , monad-logger-extras
    , monoidal-containers
    , mtl
    , postgresql-lo-stream
    , postgresql-simple
    , psql-serializable
    , psql-simple-class
    , psql-simple-groundhog
    , push-notifications
    , pwstore-fast
    , resource-pool
    , rhyolite-common
    , rhyolite-email
    , rhyolite-groundhog-legacy-types
    , rhyolite-notify-listen
    , signed-data
    , signed-data-clientsession
    , stm
    , template-haskell
    , text
    , these
    , time
    , transformers
    , transformers-base
    , unbounded-delays
    , universe

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
